# server_watchdog

./: .gitignore  Dockerfile  README.md  TODO.md  builder.bat  deb_build_all.sh  release_repo  win_build_all.bat
installer/: Cargo.toml
installer/src/: main.rs
releases/deb/: README.txt
releases/win/: README.txt
server_watchdog/: Cargo.toml
server_watchdog/components/comp_1/: Cargo.toml
server_watchdog/components/comp_1/src/: lib.rs
server_watchdog/components/comp_2/: Cargo.toml
server_watchdog/components/comp_2/src/: lib.rs
server_watchdog/components/comp_3 - Copy/: Cargo.toml
server_watchdog/components/comp_3 - Copy/src/: lib.rs
server_watchdog/plugin_api/: Cargo.toml
server_watchdog/src/: ips_to_lookup  log.rs  main.rs  monitor.rs  ping_devices.rs  plugin_api.rs
server_watchdog/src/std_components/comp_1/: Cargo.toml
server_watchdog/src/std_components/comp_1/src/: lib.rs
server_watchdog/src/std_components/comp_2/: Cargo.toml
server_watchdog/src/std_components/comp_2/src/: lib.rs
uninstaller/: Cargo.toml
unistaller/: Cargo.toml
unistaller/src/: main.rs
