[package]
name = "server_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } 
sysinfo = "0.33.0" 
mqtt-client = "0.0.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
ctrlc = "3.4" 
nix = "0.29.0"
libloading = "0.8.6"
notify = "7.0.0"
