[package]
name = "server_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies] 
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] } 
sysinfo = "0.33.0" 
serde = { version = "1.0.216", features = ["derive"] } 
serde_json = "1.0" 
ctrlc = "3.4" 
rumqttc = "0.24.0"
libc = "0.2.169"
daemonize = "0.4.1"


